// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructionsArea component Tests Check InstructionsArea component mode select 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
      "padding": "5px",
      "textAlign": "center",
    }
  }
>
  <span>
    please_select
  </span>
  <br />
  <span>
    <strong
      style={
        Object {
          "color": "var(--accent-color)",
        }
      }
    >
      "God's"
    </strong>
  </span>
  <br />
</div>
`;

exports[`InstructionsArea component Tests Test InstructionsArea component default mode with 1 selection) 1`] = `
<InstructionsArea
  alignedGLText="God's"
  dontShowTranslation={false}
  mode="default"
  selectionsReducer={
    Object {
      "selections": Array [
        Object {
          "occurrence": 1,
          "occurrences": 1,
          "text": "Mungu",
        },
        Object {
          "occurrence": 1,
          "occurrences": 2,
          "text": "na",
        },
      ],
    }
  }
  translate={[Function]}
  verseText="Lakini huruma ya Mungu na wetu na upendo wake kwa wanadamu ulipoonekana, "
>
  <div
    style={
      Object {
        "overflow": "auto",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      <strong
        style={
          Object {
            "color": "var(--accent-color)",
          }
        }
      >
        "God's"
      </strong>
    </span>
    <br />
    <span>
      translated_as
    </span>
    <br />
    <span>
      <QuoatationMarks>
        <strong
          style={
            Object {
              "color": "var(--accent-color)",
            }
          }
        >
          "
          <span
            key="0"
          >
            <strong
              style={
                Object {
                  "color": "var(--accent-color)",
                }
              }
            >
              Mungu
            </strong>
            <span>
               
            </span>
          </span>
          <span
            key="1"
          >
            <strong
              style={
                Object {
                  "color": "var(--accent-color)",
                }
              }
            >
              na
            </strong>
          </span>
          "
        </strong>
      </QuoatationMarks>
    </span>
  </div>
</InstructionsArea>
`;

exports[`InstructionsArea component Tests Test InstructionsArea component default mode with multiple selections) 1`] = `
<InstructionsArea
  alignedGLText="God's"
  dontShowTranslation={false}
  mode="default"
  selectionsReducer={
    Object {
      "selections": Array [
        Object {
          "occurrence": 1,
          "occurrences": 1,
          "text": "Mungu",
        },
        Object {
          "occurrence": 2,
          "occurrences": 2,
          "text": "na",
        },
      ],
    }
  }
  translate={[Function]}
  verseText="Lakini huruma ya Mungu na wetu na upendo wake kwa wanadamu ulipoonekana, "
>
  <div
    style={
      Object {
        "overflow": "auto",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      <strong
        style={
          Object {
            "color": "var(--accent-color)",
          }
        }
      >
        "God's"
      </strong>
    </span>
    <br />
    <span>
      translated_as
    </span>
    <br />
    <span>
      <QuoatationMarks>
        <strong
          style={
            Object {
              "color": "var(--accent-color)",
            }
          }
        >
          "
          Mungu
          <Ellipsis>
            <strong
              style={
                Object {
                  "color": "var(--accent-color)",
                }
              }
            >
               … 
            </strong>
          </Ellipsis>
          na
          "
        </strong>
      </QuoatationMarks>
    </span>
  </div>
</InstructionsArea>
`;

exports[`InstructionsArea component Tests Test InstructionsArea component default mode) 1`] = `
<InstructionsArea
  alignedGLText="God's"
  dontShowTranslation={false}
  mode="default"
  selectionsReducer={
    Object {
      "selections": Array [
        Object {
          "occurrence": 1,
          "occurrences": 1,
          "text": "Mungu",
        },
      ],
    }
  }
  translate={[Function]}
  verseText="Lakini huruma ya Mungu na wetu na upendo wake kwa wanadamu ulipoonekana, "
>
  <div
    style={
      Object {
        "overflow": "auto",
        "padding": "5px",
        "textAlign": "center",
      }
    }
  >
    <span>
      <strong
        style={
          Object {
            "color": "var(--accent-color)",
          }
        }
      >
        "God's"
      </strong>
    </span>
    <br />
    <span>
      translated_as
    </span>
    <br />
    <span>
      <QuoatationMarks>
        <strong
          style={
            Object {
              "color": "var(--accent-color)",
            }
          }
        >
          "
          <span
            key="0"
          >
            <strong
              style={
                Object {
                  "color": "var(--accent-color)",
                }
              }
            >
              Mungu
            </strong>
          </span>
          "
        </strong>
      </QuoatationMarks>
    </span>
  </div>
</InstructionsArea>
`;

exports[`InstructionsArea component Tests Test InstructionsArea component no selections) 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
      "padding": "5px",
      "textAlign": "center",
    }
  }
>
  <span>
    no_selection
  </span>
  <br />
</div>
`;

exports[`InstructionsArea component Tests Test InstructionsArea component no verse text) 1`] = `
<div
  style={
    Object {
      "overflow": "auto",
      "padding": "5px",
      "textAlign": "center",
    }
  }
>
  <span>
    empty_verse
  </span>
  <br />
</div>
`;
